<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".filteract">

    <include
        android:id="@+id/toolba"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolba"
        android:text="@string/select_your_availability" />

    <Spinner
        android:id="@+id/spir1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/textView" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spir1"
        android:text="@string/Add_your_status" />

    <EditText
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/text2"
        android:inputType="text"
        android:textSize="14sp"
        android:text="@string/hi_community"/>

    <TextView
        android:id="@+id/text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit"
        android:text="@string/select_hyper_local_distance" />
    <SeekBar
        android:id="@+id/seek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text3"
        />
    <TextView
        android:id="@+id/text4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/seek"
        android:text="@string/select_purpose" />


    <LinearLayout
        android:id="@+id/linea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text4"
        android:orientation="horizontal">
    <Button
        android:id="@+id/button3"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text4"
        android:layout_marginTop="5dp"
        android:text="@string/coffee" />

    <Button
        android:id="@+id/button"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/button3"
        android:layout_marginTop="1dp"
        android:text="@string/buisness" />

    <Button
        android:id="@+id/button1"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/button"
        android:layout_marginTop="1dp"
        android:text="@string/shopping" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linea"
        android:orientation="horizontal">

    <Button
        android:id="@+id/button2"
        android:layout_width="123dp"
        android:layout_height="48dp"
        android:layout_below="@id/button1"
        android:text="@string/dating" />

    <Button
        android:id="@+id/button4"
        android:layout_width="123dp"
        android:layout_height="48dp"
        android:layout_below="@id/button2"
        android:gravity="center"
        android:text="@string/dinning" />
    </LinearLayout>

    <Button
        android:layout_width="119dp"
        android:layout_height="43dp"
        android:layout_below="@+id/line"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="152dp"
        android:text="@string/save" />


</RelativeLayout>